--- a/templates/cv_mathis_le_gall.html
+++ b/templates/cv_mathis_le_gall.html
@@ -50,7 +50,7 @@
                 <li class="nav-item">
                     <a href="{{ url_for('analyse_greeks') }}" class="nav-link">
                         <i data-lucide="calculator"></i>
-                        <span>Analyse des Grecques</span>
+                        <span>Analyse des Greeks</span>
                     </a>
                 </li>
                 <li class="nav-item">
