--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                 <li class="nav-item">
                     <a href="{{ url_for('analyse_greeks') }}" class="nav-link">
                         <i data-lucide="calculator"></i>
-                        <span>Analyse des Grecques</span>
+                        <span>Analyse des Greeks</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -151,7 +151,7 @@
                         <div class="feature-card">
                             <div class="card-header">
                                 <i data-lucide="calculator" class="card-icon"></i>
-                                <h3>Analyse des Grecques</h3>
+                                <h3>Analyse des Greeks</h3>
                             </div>
                             <p>Calcul et visualisation des sensibilités des options (Delta, Gamma, Theta, Vega, Rho)</p>
                         </div>
