--- a/templates/index.html
+++ b/templates/index.html
@@ -70,16 +70,12 @@
         <header class="content-header">
             <div class="main-header-flex">
                 <div class="main-header-left">
-                    <div class="natixis-brand">
-                        <img src="{{ url_for('static', filename='images/logo_natixis.png') }}" alt="Logo Natixis" class="natixis-logo">
-                        <span class="natixis-text">Natixis</span>
-                    </div>
                 </div>
                 <div class="main-header-center">
                     <!-- Espace pour équilibrer le layout -->
                 </div>
                 <div class="main-header-right">
-                    <h1 class="header-title">HK - Equity Derivatives Dashboard</h1>
+                    <h1 class="header-title">Equity Derivatives Dashboard</h1>
                 </div>
             </div>
         </header>
