--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6620,7 +6620,18 @@ nav a.active {
     text-align: center;
     margin-bottom: 2rem;
     padding-bottom: 2rem;
-    border-bottom: 2px solid #374151;
+}
+
+.cv-objective {
+    margin-top: 1.5rem;
+}
+
+.cv-objective p {
+    color: #f9fafb;
+    font-size: 1.1rem;
+    line-height: 1.6;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
 }
 
 .cv-name {
